rust/examples/booleans/other.out
error[E0308]: mismatched types
 --> examples/booleans/other.rs:3:8
  |
3 |     if x {      // expected `bool`, found integer
  |        ^ expected `bool`, found integer

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
